Forum Panel: Fix layout issues (#3780)

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -255,6 +255,7 @@ $color-message-story-mention-to: #74bcff;
   --z-menu-bubble: 21;
   --z-menu-backdrop: 20;
   --z-message-highlighted: 14;
+  --z-forum-panel: 13;
   --z-message-context-menu: 13;
   --z-scroll-down-button: 12;
   --z-mobile-search: 12;
@@ -267,7 +268,6 @@ $color-message-story-mention-to: #74bcff;
   --z-message-select-area: 8;
   --z-sticky-date: 9;
   --z-register-add-avatar: 5;
-  --z-forum-panel: 5;
   --z-media-viewer-head: 3;
   --z-symbol-menu-mobile: 2;
   --z-resize-handle: 2;
